--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,3 +1,12 @@
 dash==2.14.2
-pandas==2.1.4
 plotly==5.18.0
+psutil==5.9.6
+pandas==2.1.4
+sqlalchemy==2.0.23
+dash-bootstrap-components==1.6.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-core-components==2.0.0
+dash-table==5.0.0
+dash-extensions==0.2.0
+dash-dashboards==0.1.0
